--- a/css/style.css
+++ b/css/style.css
@@ -425,6 +425,7 @@ button {
   margin-right: 10px;
   -webkit-transition: all .5s;
   transition: all .5s;
+  font-size: 0.8rem;
 }
 
 .header-btn-group .signUp:hover {
@@ -442,6 +443,7 @@ button {
   text-align: center;
   -webkit-transition: all .5s;
   transition: all .5s;
+  font-size: 0.8rem;
 }
 
 .header-btn-group .signIn:hover {
